--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         keycloak.init({ onLoad: 'login-required' }).success((authenticated) => { 
             if (authenticated) { 
                 const accessToken = keycloak.token; // الحصول على access token
+                console.log(accessToken)
                 alert("Access Token: " + accessToken);
             } else { 
                 alert("User authentication failed!"); 
