--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <!-- Include Bootstrap JS and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/keycloak-js@16.1.0/dist/keycloak.js"></script>
+
     <script>
         // Initialize Keycloak
         const keycloak = Keycloak({
-            url: 'http://localhost:8080/auth',
+            url: 'http://localhost:8080',
             realm: 'master',
             clientId: 'frontend',
         });
