--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  <script>
         // Initialize Keycloak
         const keycloak = Keycloak({
-            url: 'http://localhost:8080/auth',
+            url: 'http://localhost:8080',
             realm: 'master',
             clientId: 'frontend',
         });
